--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="da">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="layout.css">
-    <title></title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="layout.css">
+	<title>titel</title>
 </head>
 <header>
-    <nav></nav>
+	<nav></nav>
 </header>
 
 <body>
