--- a/storyboard.html
+++ b/storyboard.html
@@ -7,6 +7,24 @@
 	<title></title>
 	<link rel="stylesheet" href="">
 </head>
+<header>
+	<nav>
+		<ul>
+			<li><a href="">Forside</a></li>
+			<li><a href="">Præsentation</a></li>
+			<li><a href="">App</a></li>
+			<li><a href="">Pitch</a></li>
+			<li><a href="">Moodboard</a></li>
+			<li><a href="">Styletile</a></li>
+			<li><a href="">Test</a></li>
+			<li><a href="">Experience Map</a></li>
+			<li><a href="">Storyboard</a></li>
+			<li><a href="">Scrum</a></li>
+			<li><a href="">Burndown Chart</a></li>
+
+		</ul>
+	</nav>
+</header>
 
 <body>
 	<h1>Storyboard</h1>
