--- a/scrum.html
+++ b/scrum.html
@@ -42,11 +42,11 @@
 	</section>
 	<section id="Dag4">
 		<h1>Dag 4</h1>
-		<a href="">Scrumvideo 4</a>
+		<a href="https://www.youtube.com/watch?v=n4GDsC4NceA&index=4&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj">Scrumvideo 4</a>
 	</section>
 	<section id="Dag5">
 		<h1>Dag 5</h1>
-		<a href="">Scrumvideo 5</a>
+		<a href="https://www.youtube.com/watch?v=Dq1b5tcJgoA&index=5&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj">Scrumvideo 5</a>
 	</section>
 	<section id="Dag6">
 		<h1>Dag 6</h1>
