--- a/moodboard.html
+++ b/moodboard.html
@@ -4,23 +4,24 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="layout.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+	<title>titel</title>
 </head>
 <header>
 	<nav>
 		<ul>
-			<li><a href="">Forside</a></li>
-			<li><a href="">Præsentation</a></li>
-			<li><a href="">App</a></li>
-			<li><a href="">Pitch</a></li>
-			<li><a href="">Moodboard</a></li>
-			<li><a href="">Styletile</a></li>
-			<li><a href="">Test</a></li>
-			<li><a href="">Experience Map</a></li>
-			<li><a href="">Storyboard</a></li>
-			<li><a href="">Scrum</a></li>
-			<li><a href="">Burndown Chart</a></li>
+			<li><a href="index.html">Forside</a></li>
+			<li><a href="pr%C3%A6sentation.html">Præsentation</a></li>
+			<li><a href="app.html">App</a></li>
+			<li><a href="pitch.html">Pitch</a></li>
+			<li><a href="moodboard.html">Moodboard</a></li>
+			<li><a href="styletile.html">Styletile</a></li>
+			<li><a href="test.html">Test</a></li>
+			<li><a href="experiencemap.html">Experience Map</a></li>
+			<li><a href="storyboard.html">Storyboard</a></li>
+			<li><a href="scrum.html">Scrum</a></li>
+			<li><a href="burndownchart.html">Burndown Chart</a></li>
 
 		</ul>
 	</nav>
@@ -30,7 +31,7 @@
 	<h1>Moodboard</h1>
 	<section>
 		<div id="moodboard">
-			<img src="moodboard/moodboard_design.pdf" alt="inspiration til app'ens design">
+			<img src="moodboard/moodboard.png" alt="inspiration til app'ens design">
 		</div>
 
 
