--- a/scrum.html
+++ b/scrum.html
@@ -6,51 +6,60 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-	<title></title>
+	<title>titel</title>
 </head>
 <header>
+
 	<nav>
 		<ul>
-			<li><a href="">Forside</a></li>
-			<li><a href="">Præsentation</a></li>
-			<li><a href="">App</a></li>
-			<li><a href="">Pitch</a></li>
-			<li><a href="">Moodboard</a></li>
-			<li><a href="">Styletile</a></li>
-			<li><a href="">Test</a></li>
-			<li><a href="">Experience Map</a></li>
-			<li><a href="">Storyboard</a></li>
-			<li><a href="">Scrum</a></li>
-			<li><a href="">Burndown Chart</a></li>
+			<li><a href="index.html">Forside</a></li>
+			<li><a href="pr%C3%A6sentation.html">Præsentation</a></li>
+			<li><a href="app.html">App</a></li>
+			<li><a href="pitch.html">Pitch</a></li>
+			<li><a href="moodboard.html">Moodboard</a></li>
+			<li><a href="styletile.html">Styletile</a></li>
+			<li><a href="test.html">Test</a></li>
+			<li><a href="experiencemap.html">Experience Map</a></li>
+			<li><a href="storyboard.html">Storyboard</a></li>
+			<li><a href="scrum.html">Scrum</a></li>
+			<li><a href="burndownchart.html">Burndown Chart</a></li>
 
 		</ul>
 	</nav>
 </header>
 
-<body>
-	<section id="Dag1">
-		<h1>Dag 1</h1>
-		<a href="https://www.youtube.com/watch?v=LW6XpF5B9lM&index=1&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj">Scrumvideo 1</a>
+<body id="scrum_body">
+
+	<!--	<div class="scrum_img"></div>-->
+
+	<section id="video_scrum">
+		<div class="scrum">
+			<a class="scrum" href="https://www.youtube.com/watch?v=LW6XpF5B9lM">Scrum meeting dag 1
+			<img  src="http://i3.ytimg.com/vi/LW6XpF5B9lM/maxresdefault.jpg"></a></div>
+		<div class="scrum">
+			<a class="scrum" href="https://www.youtube.com/watch?v=KodqL8F1naU">Scrum meeting dag 2
+			<img src="http://i3.ytimg.com/vi/KodqL8F1naU/maxresdefault.jpg"></a></div>
+		<div class="scrum">
+			<a class="scrum" href="https://www.youtube.com/watch?v=mOSSEpWQX7Q">Scrum meeting dag 3
+			<img src="http://i3.ytimg.com/vi/KodqL8F1naU/maxresdefault.jpg"></a></div>
+		<div class="scrum">
+			<a class="scrum" href="https://www.youtube.com/watch?v=n4GDsC4NceA&index=4&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj&t=1s">Scrum meeting dag 4
+			<img  src="http://i3.ytimg.com/vi/n4GDsC4NceA/maxresdefault.jpg"></a></div>
+		<div class="scrum">
+			<a class="scrum" href="https://www.youtube.com/watch?v=Dq1b5tcJgoA">Scrum meeting dag 5
+			<img src="http://i3.ytimg.com/vi/Dq1b5tcJgoA/maxresdefault.jpg"></a></div>
+
+
+
 	</section>
-	<section id="Dag2">
-		<h1>Dag 2</h1>
-		<a href="https://www.youtube.com/watch?v=KodqL8F1naU&index=2&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj">Scrumvideo 2</a>
-	</section>
-	<section id="Dag3">
-		<h1>Dag 3</h1>
-		<a href="https://www.youtube.com/watch?v=mOSSEpWQX7Q&index=3&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj">Scrumvideo 3</a>
-	</section>
-	<section id="Dag4">
-		<h1>Dag 4</h1>
-		<a href="https://www.youtube.com/watch?v=n4GDsC4NceA&index=4&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj">Scrumvideo 4</a>
-	</section>
-	<section id="Dag5">
-		<h1>Dag 5</h1>
-		<a href="https://www.youtube.com/watch?v=Dq1b5tcJgoA&index=5&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj">Scrumvideo 5</a>
-	</section>
+
+
+
 	<section id="Dag6">
 		<h1>Dag 6</h1>
-		<a href="">Scrumvideo 6</a>
+		<video>
+			<source href="" type="video/mp4">Scrumvideo 6</video>
+
 	</section>
 
 </body>
