--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@
 </head>
 <header>
     <nav>
-        <ul>
-            <li><a href="index.html">Forside</a></li>
-            <li><a href="pr%C3%A6sentation.html">Præsentation</a></li>
-            <li><a href="app.html">App</a></li>
-            <li><a href="pitch.html">Pitch</a></li>
-            <li><a href="moodboard.html">Moodboard</a></li>
-            <li><a href="styletile.html">Styletile</a></li>
-            <li><a href="test.html">Test</a></li>
-            <li><a href="experiencemap.html">Experience Map</a></li>
-            <li><a href="storyboard.html">Storyboard</a></li>
-            <li><a href="scrum.html">Scrum</a></li>
-            <li><a href="burndownchart.html">Burndown Chart</a></li>
+        <a href="index.html">Forside</a>
+        <a href="pr%C3%A6sentation.html">Præsentation</a>
+        <a href="app.html">App</a>
+        <a href="pitch.html">Pitch</a>
+        <a href="moodboard.html">Moodboard</a>
+        <a href="styletile.html">Styletile</a>
+        <a href="test.html">Test</a>
+        <a href="experiencemap.html">Experience Map</a>
+        <a href="storyboard.html">Storyboard</a>
+        <a href="scrum.html">Scrum</a>
+        <a class="none" href="burndownchart.html">Burndown Chart</a>
 
-        </ul>
     </nav>
 </header>
 
-<body>
+<body id="forside">
+    <div id="baggrund"></div>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
