--- a/scrum.html
+++ b/scrum.html
@@ -2,65 +2,63 @@
 <html lang="da">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="layout.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-	<title>titel</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="layout.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <title>titel</title>
 </head>
 <header>
 
-	<nav>
-		<ul>
-			<li><a href="index.html">Forside</a></li>
-			<li><a href="pr%C3%A6sentation.html">Præsentation</a></li>
-			<li><a href="app.html">App</a></li>
-			<li><a href="pitch.html">Pitch</a></li>
-			<li><a href="moodboard.html">Moodboard</a></li>
-			<li><a href="styletile.html">Styletile</a></li>
-			<li><a href="test.html">Test</a></li>
-			<li><a href="experiencemap.html">Experience Map</a></li>
-			<li><a href="storyboard.html">Storyboard</a></li>
-			<li><a href="scrum.html">Scrum</a></li>
-			<li><a href="burndownchart.html">Burndown Chart</a></li>
+    <nav>
+        <a href="index.html">Forside</a>
+        <a href="pr%C3%A6sentation.html">Præsentation</a>
+        <a href="app.html">App</a>
+        <a href="pitch.html">Pitch</a>
+        <a href="moodboard.html">Moodboard</a>
+        <a href="styletile.html">Styletile</a>
+        <a href="test.html">Test</a>
+        <a href="experiencemap.html">Experience Map</a>
+        <a href="storyboard.html">Storyboard</a>
+        <a href="scrum.html">Scrum</a>
+        <a class="none" href="burndownchart.html">Burndown Chart</a>
 
-		</ul>
-	</nav>
+    </nav>
 </header>
 
 <body id="scrum_body">
 
-	<!--	<div class="scrum_img"></div>-->
+    <!--	<div class="scrum_img"></div>-->
 
-	<section id="video_scrum">
-		<div class="scrum">
-			<a class="scrum" href="https://www.youtube.com/watch?v=LW6XpF5B9lM">Scrum meeting dag 1
+    <section id="video_scrum">
+        <div class="scrum">
+            <a class="scrum" href="https://www.youtube.com/watch?v=LW6XpF5B9lM">Scrum meeting dag 1
 			<img  src="http://i3.ytimg.com/vi/LW6XpF5B9lM/maxresdefault.jpg"></a></div>
-		<div class="scrum">
-			<a class="scrum" href="https://www.youtube.com/watch?v=KodqL8F1naU">Scrum meeting dag 2
+        <div class="scrum">
+            <a class="scrum" href="https://www.youtube.com/watch?v=KodqL8F1naU">Scrum meeting dag 2
 			<img src="http://i3.ytimg.com/vi/KodqL8F1naU/maxresdefault.jpg"></a></div>
-		<div class="scrum">
-			<a class="scrum" href="https://www.youtube.com/watch?v=mOSSEpWQX7Q">Scrum meeting dag 3
+        <div class="scrum">
+            <a class="scrum" href="https://www.youtube.com/watch?v=mOSSEpWQX7Q">Scrum meeting dag 3
 			<img src="http://i3.ytimg.com/vi/KodqL8F1naU/maxresdefault.jpg"></a></div>
-		<div class="scrum">
-			<a class="scrum" href="https://www.youtube.com/watch?v=n4GDsC4NceA&index=4&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj&t=1s">Scrum meeting dag 4
+        <div class="scrum">
+            <a class="scrum" href="https://www.youtube.com/watch?v=n4GDsC4NceA&index=4&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj&t=1s">Scrum meeting dag 4
 			<img  src="http://i3.ytimg.com/vi/n4GDsC4NceA/maxresdefault.jpg"></a></div>
-		<div class="scrum">
-			<a class="scrum" href="https://www.youtube.com/watch?v=Dq1b5tcJgoA">Scrum meeting dag 5
+        <div class="scrum">
+            <a class="scrum" href="https://www.youtube.com/watch?v=Dq1b5tcJgoA">Scrum meeting dag 5
 			<img src="http://i3.ytimg.com/vi/Dq1b5tcJgoA/maxresdefault.jpg"></a></div>
 
 
 
-	</section>
+    </section>
 
 
 
-	<section id="Dag6">
-		<h1>Dag 6</h1>
-		<video>
+    <section id="Dag6">
+        <h1>Dag 6</h1>
+        <video>
 			<source href="" type="video/mp4">Scrumvideo 6</video>
 
-	</section>
+    </section>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
