--- a/storyboard.html
+++ b/storyboard.html
@@ -2,48 +2,47 @@
 <html lang="">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="layout.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-	<title>titel</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="layout.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <title>titel</title>
 </head>
 <header>
-	<nav>
-		<ul>
-			<li><a href="index.html">Forside</a></li>
-			<li><a href="pr%C3%A6sentation.html">Præsentation</a></li>
-			<li><a href="app.html">App</a></li>
-			<li><a href="pitch.html">Pitch</a></li>
-			<li><a href="moodboard.html">Moodboard</a></li>
-			<li><a href="styletile.html">Styletile</a></li>
-			<li><a href="test.html">Test</a></li>
-			<li><a href="experiencemap.html">Experience Map</a></li>
-			<li><a href="storyboard.html">Storyboard</a></li>
-			<li><a href="scrum.html">Scrum</a></li>
-			<li><a href="burndownchart.html">Burndown Chart</a></li>
+    <nav>
+        <a href="index.html">Forside</a>
+        <a href="pr%C3%A6sentation.html">Præsentation</a>
+        <a href="app.html">App</a>
+        <a href="pitch.html">Pitch</a>
+        <a href="moodboard.html">Moodboard</a>
+        <a href="styletile.html">Styletile</a>
+        <a href="test.html">Test</a>
+        <a href="experiencemap.html">Experience Map</a>
+        <a href="storyboard.html">Storyboard</a>
+        <a href="scrum.html">Scrum</a>
+        <a class="none" href="burndownchart.html">Burndown Chart</a>
 
-		</ul>
-	</nav>
+    </nav>
 </header>
 
 <body>
-	<h1>Storyboard</h1>
-	<section>
-		<div id="storyboard_schedule">
-			<img src="storyboard/kea_schedule_storyboard/kea_schedule.jpg" alt="storyboard for kea schedule">
-		</div>
-		<div id="storyboard_unite">
-			<img src="storyboard/kea_unite_storyboard/kea_unite1.jpg" alt="storyboard for kea unite">
-			<img src="storyboard/kea_unite_storyboard/kea_unite2.jpg" alt="storyboard for kea unite">
-			<img src="storyboard/kea_unite_storyboard/kea_unite3.jpg" alt="storyboard for kea unite">
-		</div>
-		<div id="storyboard_tutor">
-			<img src="storyboard/kea_tutor_storyboard/kea_tutor.jpg" alt="storyboard for kea tutor">
-		</div>
+    <h1 class="moodboard">Storyboard</h1>
+    <section>
+        <div id="storyboard_schedule">
+        </div>
+        <div id="storyboard_unite1">
+        </div>
+        <div id="storyboard_unite2">
+        </div>
+        <div id="storyboard_unite3">
+        </div>
+        <div id="storyboard_tutor">
+        </div>
+        <div id="storyboard_unite_final">
+        </div>
 
 
-	</section>
+    </section>
 
 </body>
 
