rettelser i scrum.html og css tilhørende

--- a/scrum.html
+++ b/scrum.html
@@ -29,22 +29,27 @@
 <body id="scrum_body">
 
     <!--	<div class="scrum_img"></div>-->
-
+    <h1 class="moodboard">Experience map</h1>
     <section id="video_scrum">
         <div class="scrum">
-            <a class="scrum" href="https://www.youtube.com/watch?v=LW6XpF5B9lM">Scrum meeting dag 1
+            Scrum meeting dag 1
+            <a class="scrum" href="https://www.youtube.com/watch?v=LW6XpF5B9lM">
 			<img  src="http://i3.ytimg.com/vi/LW6XpF5B9lM/maxresdefault.jpg"></a></div>
         <div class="scrum">
-            <a class="scrum" href="https://www.youtube.com/watch?v=KodqL8F1naU">Scrum meeting dag 2
+            Scrum meeting dag 2
+            <a class="scrum" href="https://www.youtube.com/watch?v=KodqL8F1naU">
 			<img src="http://i3.ytimg.com/vi/KodqL8F1naU/maxresdefault.jpg"></a></div>
         <div class="scrum">
-            <a class="scrum" href="https://www.youtube.com/watch?v=mOSSEpWQX7Q">Scrum meeting dag 3
+            Scrum meeting dag 3
+            <a class="scrum" href="https://www.youtube.com/watch?v=mOSSEpWQX7Q">
 			<img src="http://i3.ytimg.com/vi/KodqL8F1naU/maxresdefault.jpg"></a></div>
         <div class="scrum">
-            <a class="scrum" href="https://www.youtube.com/watch?v=n4GDsC4NceA&index=4&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj&t=1s">Scrum meeting dag 4
+            Scrum meeting dag 4
+            <a class="scrum" href="https://www.youtube.com/watch?v=n4GDsC4NceA&index=4&list=PLkFErovUqlJrU6uV5U-18qm4CPfm7rnVj&t=1s">
 			<img  src="http://i3.ytimg.com/vi/n4GDsC4NceA/maxresdefault.jpg"></a></div>
         <div class="scrum">
-            <a class="scrum" href="https://www.youtube.com/watch?v=Dq1b5tcJgoA">Scrum meeting dag 5
+            Scrum meeting dag 5
+            <a class="scrum" href="https://www.youtube.com/watch?v=Dq1b5tcJgoA">
 			<img src="http://i3.ytimg.com/vi/Dq1b5tcJgoA/maxresdefault.jpg"></a></div>
 
 
@@ -53,12 +58,6 @@
 
 
 
-    <section id="Dag6">
-        <h1>Dag 6</h1>
-        <video>
-			<source href="" type="video/mp4">Scrumvideo 6</video>
-
-    </section>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
