--- a/experiencemap.html
+++ b/experiencemap.html
@@ -25,7 +25,7 @@
     </nav>
 </header>
 
-<body>
+<body id="forside">
     <h1 class="moodboard">Experience map</h1>
     <section id="experience">
         <div id="schedule">
