--- a/scrum.html
+++ b/scrum.html
@@ -26,7 +26,7 @@
     </nav>
 </header>
 
-<body id="scrum_body">
+<body id="forside">
 
     <!--	<div class="scrum_img"></div>-->
     <h1 class="moodboard">Experience map</h1>
