--- a/storyboard.html
+++ b/storyboard.html
@@ -25,7 +25,7 @@
     </nav>
 </header>
 
-<body>
+<body id="forside">
     <h1 class="moodboard">Storyboard</h1>
     <section>
         <div id="storyboard_schedule">
