--- a/styletile.html
+++ b/styletile.html
@@ -25,7 +25,7 @@
     </nav>
 </header>
 
-<body>
+<body id="forside">
     <h1 class="moodboard">Styletile</h1>
     <div id="styletile">
     </div>
