--- a/scrum.html
+++ b/scrum.html
@@ -21,6 +21,8 @@
         <a href="experiencemap.html">Experience Map</a>
         <a href="storyboard.html">Storyboard</a>
         <a href="scrum.html">Scrum</a>
+        <a href="forretningsmodel.html">Forretningsmodel
+        </a>
         <a class="none" href="burndownchart.html">Burndown Chart</a>
 
     </nav>
