--- a/test.html
+++ b/test.html
@@ -29,150 +29,174 @@
 
 <body>
 	<section>
-		<h1>Persona</h1>
-		<p>Eigil er 23 år, og studerer multimediedesign på KEA. Han bor i København N med sin kæreste Lis. Han spiller fodbold og tager tit i byen med drengene og drikker masser af øl. Han er på SU, så rådighedsbeløbet er småt - derfor supplerer han det med et studiejob i Bog & Idé.<br> Han har gået i gymnasiet, og tog derefter et sabbatår, hvor han så småt begyndte at drømme om at blive selvstændig. Undervisning med sammenhængende teori og praksis var derfor han valgte KEA.</p>
-		<p>Han har en Mac-computer og en iPhone, som han bruger til alt. Han er indfødt bruger af digitale medier, og bevæger sig ubesværet på mange brugerflader. Af sociale medier bruger han mest Facebook, Messenger og Snapchat.</p>
-		<p>Eigil tager tit i fredagsbaren hvor han hygger sig med alle de andre fra sit studie, og nogle fra de andre semestre. Han ville gerne lære studerende fra de andre afdelinger at kende, men synes ikke han har tid eller mulighed. </p>
-		<p>Han er god til gruppearbejde, og er stærk i HTML, CSS og Javascript.</p>
-		<img src="test_dokumentation/persona.png" alt="persona">
+		<div id="persona">
+			<h1 style="color:#5a81ce;">Persona</h1>
 
-
-		<h1>Test dokumentation</h1>
-
-		<h2>Paper prototype</h2>
-
-		<p>Vi testede på en kvinde fra målgruppen, som også er elev her på KEA. Vi filmede selve testen, så vi fik alle hendes overvejelser og inputs med.<br> Vi rekrutterede Laise fra hold B. Hun sad i Uranus sammen med sin gruppe. Laise er god til at komme med input og bruge et kritisk øje når det kommer til detaljer.
-		</p>
-		<p>Måden vi udførte testen på var at vi lavede en papirprototype af vores app, med de mest vigtige features på. Denne prototype lagde vi så frem til vores testperson og bad hende finde rundt i vores app efter hendes behov. <br>Vi filmede hendes test af prototypen, for at kunne se hvad hun trykkede på osv. Dermed optog vi lyd dertil, for at få eventuelle kommentarer og tanker med, da vi også bad testpersonen tænke højt. Alt dette gav et indblik i hvordan en bruger der for første gang ser appen vil anvende den.</p>
-
-
-		<h4>KEA Schedule</h4>
-
-		<p>Laise, 0:35<br> “Jeg ville nok lave en dobbelt pil…” Til oplysning om at den nedadgående pil skifter til næste uge.
-		</p>
-		<p>
-			Laise, 01:15<br> “Hvordan jeg kommer tilbage til den forrige uge…..Ja det ved jeg ikke” Denne funktion var ikke en feature…..ups!
-		</p>
-		<p>Temaer:<br> Navigationer i app’en -> Gå tilbage, til næste uge osv.<br><br> Forbedringer/indsigter:
-
-			<br> Forbedre navigation+tekst, så brugeren ikke er i tvivl om hvordan featurerne fungerer. Måske en hjem knap, så brugeren kommer tilbage til den gældende dag.
-		</p>
-
-		<h5>Pain Point</h5>
-		<p>“Jeg synes det er åndsvagt at man skal lede efter den uge man er i [i skemaet, red.].”</p>
-
-
-		<a href="https://www.youtube.com/watch?v=YiCHppOCqy4&index=1&list=PLkFErovUqlJocNyutxehcDeSBlF2DMfDf">Test af KEA Schedule prototype</a>
-	</section>
-
-	<section>
-
-		<h4>KEA Unite</h4>
-
-		<p>Laise, 01:23<br> “Så trykker jeg på….næh huset!??” Laise tænke at huset repræsenterede “hjem” funktionen, så dette skal rettes.
-		</p>
-		<p>Laise, 03:32<br> “Personligt, synes jeg at menuen er irriterende” Vi havde lavet en burger-kugle menu hvor det var muligt at bevæge den rundt på skærmen. Det var irriterende for vores testperson.
-		</p>
-		<p>Laise, 05:27<br> “Det var ikke klart fra starten af at farverne indikerede de forskellige afdelinger på KEA.
-		</p>
-		<p>Temaer:<br> Menu -> Designet af menuen skal gøres helt klart. Der har været mange forskellige forslag og vi har ikke rigtig kunne bestemme os.<br> Farvekoder -> Vi skal finde en måde at gøre det klart for brugeren hvad farvekoderne betyder.<br><br> Forbedringer/indsigter:
-
-			<br> Designet af menuen skal gøres helt klart. Der har været mange forskellige forslag og vi har ikke rigtig kunne bestemme os. <br>Vi skal finde en måde at gøre det klart for brugeren hvad farvekoderne betyder.<br> Vi satte os ned i går og fjernede featuren “book et lokale” og “lokation”. <br>Efter interviewet med Laise fik vi en stor indsigt i hvilke features der fungerede og hvilke der evt. skulle fjernes. Vi har lavet et redesign af vores menu efter en del inspiration søgen på nettet.
-		</p>
-
-		<h5>Pain Point</h5>
-		<p>“Jeg kender kun multimediedesignere på KEA. Jeg er god til at netværke på den gammeldags facon, face to face, men ikke så meget digitalt. Det ville være rart, hvis der var et forum hvor jeg kunne mingle med folk.”</p>
-
-		<div id="img_prototype">
-			<img src="test_dokumentation/charette/charette1.jpg" alt="paper prototype kea unite">
-			<img src="test_dokumentation/charette/charette2.jpg" alt="paper prototype kea unite">
-			<img src="test_dokumentation/charette/charette3.jpg" alt="paper prototype kea unite">
-			<img src="test_dokumentation/charette/charette4.jpg" alt="paper prototype kea unite">
+			<p class="persona"><img class="persona_img" src="test_dokumentation/persona.png" alt="persona">Eigil er 23 år, og studerer multimediedesign på KEA. Han bor i København N med sin kæreste Lis. Han spiller fodbold og tager tit i byen med drengene og drikker masser af øl. Han er på SU, så rådighedsbeløbet er småt - derfor supplerer han det med et studiejob i Bog & Idé.<br> Han har gået i gymnasiet, og tog derefter et sabbatår, hvor han så småt begyndte at drømme om at blive selvstændig. Undervisning med sammenhængende teori og praksis var derfor han valgte KEA.</p>
+			<p class="persona">Han har en Mac-computer og en iPhone, som han bruger til alt. Han er indfødt bruger af digitale medier, og bevæger sig ubesværet på mange brugerflader. Af sociale medier bruger han mest Facebook, Messenger og Snapchat.</p>
+			<p class="persona">Eigil tager tit i fredagsbaren hvor han hygger sig med alle de andre fra sit studie, og nogle fra de andre semestre. Han ville gerne lære studerende fra de andre afdelinger at kende, men synes ikke han har tid eller mulighed. </p>
+			<p class="persona">Han er god til gruppearbejde, og er stærk i HTML, CSS og Javascript.</p>
 		</div>
-		<a href="https://youtu.be/Q41l2aCiizg">Test af KEA Unite prototype</a>
+
+
+		<div id="prototype">
+			<h1 style="color:#5a81ce;">Test dokumentation</h1>
+
+			<h2>Paper prototype</h2>
+
+			<p class="prototype">Vi testede på en kvinde fra målgruppen, som også er elev her på KEA. Vi filmede selve testen, så vi fik alle hendes overvejelser og inputs med.<br> Vi rekrutterede Laise fra hold B. Hun sad i Uranus sammen med sin gruppe. Laise er god til at komme med input og bruge et kritisk øje når det kommer til detaljer.
+			</p>
+			<p class="prototype">Måden vi udførte testen på var at vi lavede en papirprototype af vores app, med de mest vigtige features på. Denne prototype lagde vi så frem til vores testperson og bad hende finde rundt i vores app efter hendes behov. <br>Vi filmede hendes test af prototypen, for at kunne se hvad hun trykkede på osv. Dermed optog vi lyd dertil, for at få eventuelle kommentarer og tanker med, da vi også bad testpersonen tænke højt. Alt dette gav et indblik i hvordan en bruger der for første gang ser appen vil anvende den.</p>
+		</div>
+
+
+		<div id="kea_schedule">
+			<h4><b>KEA Schedule</b></h4>
+
+			<blockquote>Jeg ville nok lave en dobbelt pil… <br>
+				<p style="color:#000000;">Til oplysning om at den nedadgående pil skifter til næste uge.</p><cite>Laise, 0:35</cite>
+			</blockquote>
+			<blockquote>
+				Hvordan jeg kommer tilbage til den forrige uge…Ja det ved jeg ikke.<br>
+				<p style="color:#000000;">Denne funktion var ikke en feature…..ups!</p><cite>Laise, 01:15</cite>
+			</blockquote>
+			<p class="schedule_prototype"><b>Temaer:</b><br> Navigationer i app’en -> Gå tilbage, til næste uge osv.<br><br> Forbedringer/indsigter:
+
+				<br> Forbedre navigation+tekst, så brugeren ikke er i tvivl om hvordan featurerne fungerer. Måske en hjem knap, så brugeren kommer tilbage til den gældende dag.
+			</p><br>
+
+			<h5><b>Pain Point</b></h5>
+			<blockquote style="color:#dc648d;">Jeg synes det er åndsvagt at man skal lede efter den uge man er i [i skemaet, red.].</blockquote>
+
+
+			<a href="https://www.youtube.com/watch?v=YiCHppOCqy4&index=1&list=PLkFErovUqlJocNyutxehcDeSBlF2DMfDf">Test af KEA Schedule prototype</a></div>
 	</section>
 
 	<section>
-		<h4>KEA Tutor</h4>
-		<p>Laise, 01:35<br> “Hvad er det her?” Det var en account setting. Det blev foreslået at det skulle laves om til fx. et tandhjul.
-		</p>
-		<p>Laise, 02:26<br> “Har account samme udseende for tutor og studerende?” Nej det har de ikke, dette skal gøre mere klart. Eleverne skal ikke udfylde noget da uni login sørger for at deres oplysninger står der i forvejen.
-		</p>
-		<p>Laise, 03:25<br> “Hvad er det her for noget?” Det var et point system, efter hvor brugbart svaret havde været. Inspiration fra StackoverFlow.
-		</p>
-		<p>Temaer:<br> Ikon redesign -> account settings<br> App design -> overvej redesign af featuren “questions?”. Gør udseendet for tutor account og student account forskellige.<br><br> Forbedringer/indsigter:
 
-			<br> Overvej redesign af featuren “questions?”. <br> Gør udseendet for tutor account og student account forskellige. <br> Ikonet account settings skal redesignes.<br>
-		</p>
+		<div id="kea_unite">
+			<h4><b>KEA Unite</b></h4>
 
-		<h5>Pain Point</h5>
-		<p>“Jeg kunne godt bruge hjælp til kodning en gang imellem. Især op til eksamen.”</p>
+			<blockquote>Så trykker jeg på….næh huset!??
+				<p style="color:#000000;"> Laise tænke at huset repræsenterede “hjem” funktionen, så dette skal rettes.</p><cite>Laise, 01:23</cite></blockquote>
 
-		<a href="https://www.youtube.com/watch?v=kQ394K6aYiY&index=2&list=PLkFErovUqlJocNyutxehcDeSBlF2DMfDf">Test af KEA Tutor prototype</a>
+			<blockquote>Personligt, synes jeg at menuen er irriterende
+				<p style="color:#000000;">Vi havde lavet en burger-kugle menu hvor det var muligt at bevæge den rundt på skærmen. Det var irriterende for vores testperson.</p> <cite>Laise, 03:32</cite></blockquote>
 
+			<blockquote>Det var ikke klart fra starten af at farverne indikerede de forskellige afdelinger på KEA.<cite>Laise, 05:27</cite>
+			</blockquote>
+			<p><b>Temaer:</b><br> Menu -> Designet af menuen skal gøres helt klart. Der har været mange forskellige forslag og vi har ikke rigtig kunne bestemme os.<br> Farvekoder -> Vi skal finde en måde at gøre det klart for brugeren hvad farvekoderne betyder.<br><br> <b>Forbedringer/indsigter:</b>
+
+				<br> Designet af menuen skal gøres helt klart. Der har været mange forskellige forslag og vi har ikke rigtig kunne bestemme os. <br>Vi skal finde en måde at gøre det klart for brugeren hvad farvekoderne betyder.<br> Vi satte os ned i går og fjernede featuren “book et lokale” og “lokation”. <br>Efter interviewet med Laise fik vi en stor indsigt i hvilke features der fungerede og hvilke der evt. skulle fjernes. Vi har lavet et redesign af vores menu efter en del inspiration søgen på nettet.
+			</p>
+
+			<h5><b>Pain Point</b></h5>
+			<blockquote style="color:#dc648d;">Jeg kender kun multimediedesignere på KEA. Jeg er god til at netværke på den gammeldags facon, face to face, men ikke så meget digitalt. Det ville være rart, hvis der var et forum hvor jeg kunne mingle med folk.</blockquote>
+
+			<div id="img_prototype">
+				<img class="unite_img" src="test_dokumentation/charette/charette1.jpg" alt="paper prototype kea unite">
+				<img class="unite_img_rotate" src="test_dokumentation/charette/charette2.jpg" alt="paper prototype kea unite">
+				<img class="unite_img_rotate" src="test_dokumentation/charette/charette3.jpg" alt="paper prototype kea unite">
+				<img class="unite_img" src="test_dokumentation/charette/charette4.jpg" alt="paper prototype kea unite">
+			</div>
+			<a href="https://youtu.be/Q41l2aCiizg">Test af KEA Unite prototype</a></div>
 	</section>
 
 	<section>
+		<div id="kea_tutor">
+			<h4><b>KEA Tutor</b></h4>
+			<blockquote> Hvad er det her?
+				<p style="color:#000000;">Det var en account setting. Det blev foreslået at det skulle laves om til fx. et tandhjul.</p><cite>Laise, 01:35</cite>
+			</blockquote>
+			<blockquote> Har account samme udseende for tutor og studerende?
+				<p style="color:#000000;">Nej det har de ikke, dette skal gøre mere klart. Eleverne skal ikke udfylde noget da uni login sørger for at deres oplysninger står der i forvejen.</p><cite>Laise, 02:26</cite>
+			</blockquote>
+			<blockquote> Hvad er det her for noget?
+				<p style="color:#000000;">Det var et point system, efter hvor brugbart svaret havde været. Inspiration fra StackoverFlow.</p><cite>Laise, 03:25</cite>
+			</blockquote>
+			<p><b>Temaer:</b><br> Ikon redesign -> account settings<br> App design -> overvej redesign af featuren “questions?”. Gør udseendet for tutor account og student account forskellige.<br><br> <b>Forbedringer/indsigter:</b>
+
+				<br> Overvej redesign af featuren “questions?”. <br> Gør udseendet for tutor account og student account forskellige. <br> Ikonet account settings skal redesignes.<br>
+			</p>
+
+			<h5><b>Pain Point</b></h5>
+			<blockquote style="color:#dc648d;">Jeg kunne godt bruge hjælp til kodning en gang imellem. Især op til eksamen.</blockquote>
+
+			<a href="https://www.youtube.com/watch?v=kQ394K6aYiY&index=2&list=PLkFErovUqlJocNyutxehcDeSBlF2DMfDf">Test af KEA Tutor prototype</a></div>
+
+	</section>
+
+	<section id="features">
 		<h3>Features og aktiviteter</h3>
 
 
-		<p>Log in</p>
-		<ul>
-			<li>Log in med dit uni login eller din firma account</li>
-		</ul>
+		<div class="login">
+			<p><b>Log in</b></p>
+			<ul>
+				<li>Log in med dit uni login eller din firma account</li>
+			</ul>
+		</div>
 
-		<p>Du er nu inde i menuen. Du kan vælge flg.</p>
-		<ul>
-			<li>Klik på Feed</li>
-			<li>Klik på Profil</li>
-			<li>Klik på Chat</li>
-			<li>Log Out</li>
-		</ul>
+		<div class="menu">
+			<p><b>Du er nu inde i menuen. Du kan vælge flg.</b></p>
+			<ul>
+				<li>Klik på Feed</li>
+				<li>Klik på Profil</li>
+				<li>Klik på Chat</li>
+				<li>Log Out</li>
+			</ul>
+		</div>
 
-		<p>Din profil.</p>
-		<ul>
-			<li>Du kan trykke på chat ikonet og gå direkte ind i chat historik</li>
-			<li>Du kan gå ind i kalenderen og få en oversigt over de forskellige events</li>
-			<li>Du kan gå ind i indstillinger og redigere din profil</li>
-			<li>Du kan gå ind i notifikationer og læse mere om kommende arrangementer
-				<ul>
-					<li>Du får push beskeder ang. arrangementer relevant for dit studie</li>
-					<li>Du kan gemme notifikationen, hvor arrangementet vil blive gemt i din kalender</li>
-					<li>Du kan også vælge at læse mere om arrangementet</li>
-				</ul>
-			</li>
+		<div class="profil">
+			<p><b>Din profil.</b></p>
+			<ul>
+				<li>Du kan trykke på chat ikonet og gå direkte ind i chat historik</li>
+				<li>Du kan gå ind i kalenderen og få en oversigt over de forskellige events</li>
+				<li>Du kan gå ind i indstillinger og redigere din profil</li>
+				<li>Du kan gå ind i notifikationer og læse mere om kommende arrangementer
+					<ul>
+						<li>Du får push beskeder ang. arrangementer relevant for dit studie</li>
+						<li>Du kan gemme notifikationen, hvor arrangementet vil blive gemt i din kalender</li>
+						<li>Du kan også vælge at læse mere om arrangementet</li>
+					</ul>
+				</li>
 
-		</ul>
+			</ul>
+		</div>
 
-		<p>Chat</p>
-		<ul>
-			<li>Her kan du se din chat historik</li>
-			<li>Du har mulighed for at søge efter en bestemt samtale, ved tryk på forstørrelsesglasset</li>
-			<li>Du kan skrive en ny besked</li>
-			<li>Ved tryk på en af de nuværende samtaler kommer du ind til tråden og kan læse divs. beskeder</li>
-		</ul>
-
-
-		<p>Feed</p>
-		<ul>
-			<li>Brug filteret til at søge efter
-				<ul>
-					<li>Afdeling</li>
-					<li>Uddannelse</li>
-					<li>Semester</li>
-				</ul>
-			</li>
-			<li>Du kan selv skrive et opslag</li>
-			<li>Du kan scrolle igennem feeden og læse hvem andre unge entreprenører søger</li>
-			<li>Tryk på knappen <i>se mere</i> for at læse hele opslaget
-				<ul>
-					<li>Tryk på chat ikonet for at besvare opslaget</li>
-					<li>Tryk på pilen tilbage for at komme tilbage til feeden</li>
-				</ul>
-			</li>
+		<div class="chat">
+			<p><b>Chat</b></p>
+			<ul>
+				<li>Her kan du se din chat historik</li>
+				<li>Du har mulighed for at søge efter en bestemt samtale, ved tryk på forstørrelsesglasset</li>
+				<li>Du kan skrive en ny besked</li>
+				<li>Ved tryk på en af de nuværende samtaler kommer du ind til tråden og kan læse divs. beskeder</li>
+			</ul>
+		</div>
 
 
-		</ul>
+		<div class="feed">
+			<p><b>Feed</b></p>
+			<ul>
+				<li>Brug filteret til at søge efter
+					<ul>
+						<li>Afdeling</li>
+						<li>Uddannelse</li>
+						<li>Semester</li>
+					</ul>
+				</li>
+				<li>Du kan selv skrive et opslag</li>
+				<li>Du kan scrolle igennem feeden og læse hvem andre unge entreprenører søger</li>
+				<li>Tryk på knappen <i>se mere</i> for at læse hele opslaget
+					<ul>
+						<li>Tryk på chat ikonet for at besvare opslaget</li>
+						<li>Tryk på pilen tilbage for at komme tilbage til feeden</li>
+					</ul>
+				</li>
+
+
+			</ul>
+		</div>
 
 	</section>
 
