--- a/Benchmarking.html
+++ b/Benchmarking.html
@@ -11,7 +11,7 @@
 <header>
     <nav>
         <a href="index.html">Forside</a>
-        <a href="pr%C3%A6sentation.html">Præsentation</a>
+        <a href="Benchmarking.html">Benchmarking</a>
         <a href="app.html">App</a>
         <a href="pitch.html">Pitch</a>
         <a href="moodboard.html">Moodboard</a>
@@ -28,6 +28,9 @@
 </header>
 
 <body id="forside">
+
+    <h1>Benchmarking</h1>
+    <div id="benchmarking"></div>
 
 </body>
 
