--- a/scrum.html
+++ b/scrum.html
@@ -12,7 +12,7 @@
 
     <nav>
         <a href="index.html">Forside</a>
-        <a href="pr%C3%A6sentation.html">Præsentation</a>
+        <a href="Benchmarking.html">Benchmarking</a>
         <a href="app.html">App</a>
         <a href="pitch.html">Pitch</a>
         <a href="moodboard.html">Moodboard</a>
