--- a/forretningsmodel.html
+++ b/forretningsmodel.html
@@ -14,8 +14,7 @@
         <a href="Benchmarking.html">Benchmarking</a>
         <a href="app.html">App</a>
         <a href="pitch.html">Pitch</a>
-        <a href="moodboard.html">Moodboard</a>
-        <a href="styletile.html">Styletile</a>
+        <a href="moodboard.html">Procesdokumentation</a>
         <a href="test.html">Test</a>
         <a href="experiencemap.html">Experience Map</a>
         <a href="storyboard.html">Storyboard</a>
@@ -30,7 +29,9 @@
 <body id="forside">
     <h1 class="moodboard">Forretningsmodel</h1>
     <h2>Free Model</h2>
-    <p id="change"> Appen KEA Unite skaber værdi for kunderne på den måde at det giver dem en øget mulighed for at starte virksomhed op med andre. Endvidere kan appens formål også være at hjælpe studerende med at networke. Da danmark er et at de lande hvor det er lettest at drive og starte virksomhed, mener vi at det er en god ide at fremme mulighederne for studerende at fuldføre deres mål om at starte noget op. Dette skal som sagt ske igennem vores app der åbner nye døre op for studerende med forskellige kompetencer, til at kunne arbejde sammen om et mål. Endvidere som en ekstra feature, kan virksomheder der søger unge studerende også anvende vores app til at browse rundt i profiler i søg om praktikanter eller lign. Dette øger også den endelige værdi hos kunderne (de studerende) da de som ekstra har mulighed for at blive scoutet af virksomheder der søger studerende. Appen er free to use for kea studerende med et UNI login, hvorved de frit kan bruge alle features i appen. Dette står til formål om at øge antallet af iværksættere fra KEA ved at give dem et værktøj til at kombinere deres faglighed på tværs af de forskellige uddannelser. Dette vil i sin ende forhåbentlig skabe omtale for studiet. Dermed virker appen som noget der fremmer unge iværksættere samtidigt med at indirekte reklamere for KEA. Appen har dog også et abonnement man kan købe, dog er det kun for virksomheder, der eventuelt ønsker at søge studerende som praktikanter eller lign. Dette er den primære og eneste direkte indtægt fra appen. Altså gøres der brug af en Free-model med en mindre subscription-model indbygget til udefrakommende. </p>
+    <p id="change"> Appen KEA Unite skaber værdi for kunderne på den måde at det giver dem en øget mulighed for at starte virksomhed op med andre. Endvidere kan appens formål også være at hjælpe studerende med at networke. Da danmark er et at de lande hvor det er lettest at drive og starte virksomhed, mener vi at det er en god ide at fremme mulighederne for studerende at fuldføre deres mål om at starte noget op. Dette skal som sagt ske igennem vores app der åbner nye døre op for studerende med forskellige kompetencer, til at kunne arbejde sammen om et mål.</p>
+    <p id="change"> Endvidere som en ekstra feature, kan virksomheder der søger unge studerende også anvende vores app til at browse rundt i profiler i søg om praktikanter eller lign. Dette øger også den endelige værdi hos kunderne (de studerende) da de som ekstra har mulighed for at blive scoutet af virksomheder der søger studerende.</p>
+    <p id="change"> Appen er free to use for kea studerende med et UNI login, hvorved de frit kan bruge alle features i appen. Dette står til formål om at øge antallet af iværksættere fra KEA ved at give dem et værktøj til at kombinere deres faglighed på tværs af de forskellige uddannelser. Dette vil i sin ende forhåbentlig skabe omtale for studiet. Dermed virker appen som noget der fremmer unge iværksættere samtidigt med at indirekte reklamere for KEA. Appen har dog også et abonnement man kan købe, dog er det kun for virksomheder, der eventuelt ønsker at søge studerende som praktikanter eller lign. Dette er den primære og eneste direkte indtægt fra appen. Altså gøres der brug af en Free-model med en mindre subscription-model indbygget til udefrakommende. </p>
 
     <a href="http://www.doingbusiness.org/data/exploreeconomies/denmark">Doing Business</a> </body>
 
