--- a/scrum.html
+++ b/scrum.html
@@ -15,8 +15,7 @@
         <a href="Benchmarking.html">Benchmarking</a>
         <a href="app.html">App</a>
         <a href="pitch.html">Pitch</a>
-        <a href="moodboard.html">Moodboard</a>
-        <a href="styletile.html">Styletile</a>
+        <a href="moodboard.html">Procesdokumentation</a>
         <a href="test.html">Test</a>
         <a href="experiencemap.html">Experience Map</a>
         <a href="storyboard.html">Storyboard</a>
