--- a/Benchmarking.html
+++ b/Benchmarking.html
@@ -14,8 +14,7 @@
         <a href="Benchmarking.html">Benchmarking</a>
         <a href="app.html">App</a>
         <a href="pitch.html">Pitch</a>
-        <a href="moodboard.html">Moodboard</a>
-        <a href="styletile.html">Styletile</a>
+        <a href="moodboard.html">Procesdokumentation</a>
         <a href="test.html">Test</a>
         <a href="experiencemap.html">Experience Map</a>
         <a href="storyboard.html">Storyboard</a>
@@ -31,6 +30,10 @@
 
     <h1>Benchmarking</h1>
     <div id="benchmarking"></div>
+    <p id="change">Vi har anvendt et benchmark for at kunne stille vores primære app idéer op mod hinanden. Ud fra dette får de hver en score ud fra forskellige punkter. Den app der står med bedste muligheder er den med den højeste score.</p>
+    <p id="change"> De valgte punkter, er ud fra hvad vi mente der var de vigtigste variabler for at finde den bedste app. Herunder, målgruppens størrelse, dets skalerbarhed. Endvidere vurderede vi den værdi hver app ville skabe. Appens realiserbarhed tog vi også i mente samt dets potentielle trusler fra konkurrenter. </p>
+    <p id="change">Den endelige app med den størtse score, blev KEA UNITE.
+    </p>
 
 </body>
 
