--- a/test.html
+++ b/test.html
@@ -15,14 +15,14 @@
         <a href="Benchmarking.html">Benchmarking</a>
         <a href="app.html">App</a>
         <a href="pitch.html">Pitch</a>
-        <a href="moodboard.html">Moodboard</a>
-        <a href="styletile.html">Styletile</a>
+        <a href="moodboard.html">Procesdokumentation</a>
         <a href="test.html">Test</a>
         <a href="experiencemap.html">Experience Map</a>
         <a href="storyboard.html">Storyboard</a>
         <a href="scrum.html">Scrum</a>
         <a href="forretningsmodel.html">Forretningsmodel
         </a>
+        <a class="none" href="burndownchart.html">Burndown Chart</a>
     </nav>
 </header>
 
