--- a/moodboard.html
+++ b/moodboard.html
@@ -33,6 +33,10 @@
     <div id="moodboard">
     </div>
 
+    <h2 class="moodboard">Valg af app idé</h2>
+    <p id="change"> Check: <a href="Benchmarking.html">Benchmarking</a> og <a href="test.html">Test</a></p>
+
+
     <h2 class="moodboard">UI - Kits</h2>
 
 
@@ -42,6 +46,7 @@
     </div>
 
     <h2 class="moodboard">App Ikon</h2>
+
 
 </body>
 
