--- a/moodboard.html
+++ b/moodboard.html
@@ -38,6 +38,23 @@
 	</div>
 
 	<h2 class="moodboard">UI - Kits</h2>
+	<div id="kits">
+		<div id="ui_eksempler">
+			<h3>Eksempler på UI kits vi havde for øje</h3>
+			<img class="eks1" src="screendump_uikit/eks1.png" alt="eks1">
+			<img class="eks1" src="screendump_uikit/eks2.png" alt="eks2">
+		</div>
+	</div>
+
+	<div id="kits2">
+		<div id="ui_kit">
+			<h3>Udsnit fra det valgte UI Kit</h3>
+			<img class="brugt" src="screendump_uikit/valgt1.png" alt="vagt1">
+			<img class="brugt" src="screendump_uikit/valgt2.png" alt="valgt2">
+		</div>
+		<a href="https://drive.google.com/drive/folders/1jgBegy0pguDTe4Yj32yb0GAMwBEN3JCq">UI Kit mappe</a>
+	</div>
+
 
 
 
