--- a/moodboard.html
+++ b/moodboard.html
@@ -32,7 +32,21 @@
 	<h1 class="moodboard">Procesdokumentation</h1>
 
 	<h2 class="moodboard">Skitser</h2>
+	<div id="skitser">
+		<img class="img_rotate" src="moodboard/jose1.jpg" alt="skitse1">
+		<img class="img_rotate" src="moodboard/jose2.jpg" alt="skitse2">
+		<img class="img_malou" src="moodboard/malou.JPG" alt="skitse3">
+		<img class="img_ok" src="moodboard/rasmus.jpg" alt="skitse4">
 
+
+	</div>
+
+	<h2 class="moodboard">Design process af app ikon</h2>
+	<div id="app_ikon">
+		<img class="app_ikon" src="moodboard/kea_unite_logo_ikon.svg" alt="design process">
+		<img class="app_ikon" src="moodboard/app_ikon_str.png" alt="app ikon str.">
+		<img class="app_ikon_final" src="moodboard/SVG/Asset%201.svg" alt="det endelige design">
+	</div>
 
 
 
