--- a/app.html
+++ b/app.html
@@ -26,6 +26,23 @@
 </header>
 
 <body id="forside">
+    <div id="front"></div>
+    <div id="frontbaggrund"></div>
+
+    <div id="profil_container">
+        <div id="profil1"></div>
+        <div id="profil2"></div>
+        <div id="profil3"></div>
+        <div id="profil4"></div>
+    </div>
+
+
+
+
+
+
+
+
 
 </body>
 
