--- a/app.html
+++ b/app.html
@@ -2,30 +2,30 @@
 <html lang="">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="layout.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-	<title>titel</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="layout.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <title>titel</title>
 </head>
 <header>
-	<nav>
-		<a href="index.html">Forside</a>
-		<a href="app.html">App</a>
-		<a href="pitch.html">Pitch</a>
-		<a href="moodboard.html">Procesdokumentation</a>
-		<a href="test.html">Test</a>
-		<a href="experiencemap.html">Experience Map</a>
-		<a href="storyboard.html">Storyboard</a>
-		<a href="scrum.html">Scrum</a>
-		<a href="forretningsmodel.html">Forretningsmodel
+    <nav>
+        <a href="index.html">Forside</a>
+        <a href="app.html">App</a>
+        <a href="pitch.html">Pitch</a>
+        <a href="moodboard.html">Procesdokumentation</a>
+        <a href="test.html">Test</a>
+        <a href="experiencemap.html">Experience Map</a>
+        <a href="storyboard.html">Storyboard</a>
+        <a href="scrum.html">Scrum</a>
+        <a href="forretningsmodel.html">Forretningsmodel
         </a>
-		<a class="none" href="burndownchart.html">Burndown Chart</a>
+        <a class="none" href="burndownchart.html">Burndown Chart</a>
 
-	</nav>
+    </nav>
 </header>
 
-<<<<<<< HEAD
+
 <body id="forside">
     <div id="front"></div>
     <div id="frontbaggrund"></div>
@@ -37,16 +37,37 @@
         <div id="profil4"></div>
     </div>
 
+    <div id="profil_tekst_container">
+        <div id="tekst1">
+            <p>Malou Vincents<br> Malo0461@stud.kea.dk</p>
+        </div>
+        <div id="tekst2">
+            <p>Mateo Güldner<br> Mateo.guldner@gmail.com</p>
+        </div>
+        <div id="tekst3">
+            <p>Josefine Rasch<br> Josefinerasch@gmail.com</p>
+        </div>
+        <div id="tekst4">
+            <p> Rasmus Juby Rosbæk<br> Rasmus_22@hotmail.com</p>
+        </div>
+    </div>
+
+    <div id="intro_af_app">
+        <div id="flottefyr_img"></div>
+        <div id="tekst_fyr">
+            <ul>
+                <li>Eigil 23 år</li>
+                <li>Studerer multimediedesign på KEA</li>
+                <li>Bor i København N </li>
+                <li>Drømmer om at blive selvstændig</li>
+            </ul>
+
+        </div>
+
+    </div>
 
 
 
-
-
-
-
-=======
-<body>
->>>>>>> origin/master
 
 </body>
 
