--- a/app.html
+++ b/app.html
@@ -9,45 +9,56 @@
 	<title>titel</title>
 </head>
 <header>
-	<nav>
-		<a href="index.html">Forside</a>
-		<a href="app.html">App</a>
-		<a href="pitch.html">Pitch</a>
-		<a href="moodboard.html">Procesdokumentation</a>
-		<a href="test.html">Test</a>
-		<a href="experiencemap.html">Experience Map</a>
-		<a href="storyboard.html">Storyboard</a>
-		<a href="scrum.html">Scrum</a>
-		<a href="forretningsmodel.html">Forretningsmodel
+	<nav id="stor_nav">
+		<a id="stor_nav_a" href="index.html">Forside</a>
+		<a id="stor_nav_a" href="app.html">App</a>
+		<a id="stor_nav_a" href="pitch.html">Pitch</a>
+		<a id="stor_nav_a" href="moodboard.html">Procesdokumentation</a>
+		<a id="stor_nav_a" href="test.html">Test</a>
+		<a id="stor_nav_a" href="experiencemap.html">Experience Map</a>
+		<a id="stor_nav_a" href="storyboard.html">Storyboard</a>
+		<a id="stor_nav_a" href="scrum.html">Scrum</a>
+		<a id="stor_nav_a" href="forretningsmodel.html">Forretningsmodel
         </a>
 		<a class="none" href="burndownchart.html">Burndown Chart</a>
 
 	</nav>
 </header>
 
-<<<<<<< HEAD
+
 <body id="forside">
-    <div id="front"></div>
-    <div id="frontbaggrund"></div>
+	<div id="front"></div>
+	<div id="frontbaggrund"></div>
+	<nav id="mini_nav">
+		<a id="mini_nav_a" href="#profil_container">Info om os</a>
+		<a id="mini_nav_a" href="">Idé for app</a>
+		<a id="mini_nav_a" href="">App ikon</a>
+		<a id="mini_nav_a" href="">Login</a>
+		<a id="mini_nav_a" href="">Menu</a>
+		<a id="mini_nav_a" href="">Feed</a>
+		<a id="mini_nav_a" href="">Profil</a>
+		<a id="mini_nav_a" href="">Chat</a>
+		<a id="mini_nav_a" href="#guide">Guide i app</a>
+	</nav>
 
-    <div id="profil_container">
-        <div id="profil1"></div>
-        <div id="profil2"></div>
-        <div id="profil3"></div>
-        <div id="profil4"></div>
-    </div>
+	<div id="profil_container">
+		<div id="profil1"></div>
+		<div id="profil2"></div>
+		<div id="profil3"></div>
+		<div id="profil4"></div>
+	</div>
 
 
+	<div id="guide">
+		<video width="400" height="340" controls>
+  <source src="pitch/kea_unite_done.mp4" type="video/mp4">
 
+  Your browser does not support the video tag.
+</video>
+		<p class="guide_app"></p>
 
-
-
-
-
-=======
-<body>
->>>>>>> origin/master
-
+	</div>
 </body>
+
 
 </html>
