benefits done lol noob rekt gg easy

--- a/app.html
+++ b/app.html
@@ -78,6 +78,22 @@
 
     </div>
 
+    <div id="benefits_container">
+        <div id="menuen1"></div>
+        <div id="benefits_tekt">
+            <ul>
+                <li>Seriøs</li>
+                <li>Overskuelig</li>
+                <li>Brugervenlig</li>
+            </ul>
+        </div>
+        <div id="menuen2"></div>
+
+
+
+
+    </div>
+
 
 
     <div id="guide">
